# FlightConfigurator

./: CODE_STYLE.md  DEV_PROCESS.md  PLAN.md  README.md
FlightConfigurator_v1/: CMakeLists.txt  CMakeLists.txt.user.b03f569  CMakeLists.txt.user.fd6d483  FullParametrList.txt  README.md  datamapwidget.cpp  datamapwidget.h  dronemarker.cpp  dronemarker.h  flightplan.cpp  flightplan.h  gismainwindow.h  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapbuttons.cpp  mapbuttons.h  mapcontroller.cpp  mapcontroller.h  mapwidget.cpp  mapwidget.h  plan_attrs.h  planmapwidget.cpp  planmapwidget.h
FlightConfigurator_v1/binder/: binder.h  mavlink_communicator.cpp
FlightConfigurator_v1/binder/handlers/: abstract_handler.h  attitude_handler.cpp  attitude_handler.h  heartbeat_handler.cpp  heartbeat_handler.h
FlightConfigurator_v1/build-pix-Desktop-Debug/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
FlightConfigurator_v1/build-pix-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-b4e91b42be1d11dd1ecd.json  cmakeFiles-v1-9d97d2b5e01108ef3404.json  codemodel-v2-b1391d5b5cf05d2eae07.json  index-2023-05-01T18-42-08-0214.json  target-pix_lib-Debug-ff5b5eaccec6133ad02c.json
FlightConfigurator_v1/build-src-Desktop-Debug/: CMakeCache.txt  FlightConfigurator_v1_build.cbp  Makefile  cmake_install.cmake
FlightConfigurator_v1/build-src-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-45fc36853c1590f05193.json  cmakeFiles-v1-97c9e23e696f83af61b2.json  codemodel-v2-df1e90b894318ea71f79.json  index-2023-05-01T18-43-09-0313.json  target-FlightConfigurator_v1_build-Debug-ab631a1b919e3b02c142.json  target-FlightConfigurator_v1_build_autogen-Debug-607bc495371961496164.json
FlightConfigurator_v1/build-src-Desktop-Debug/FlightConfigurator_v1_build_autogen/: moc_predefs.h
FlightConfigurator_v1/build-src-Desktop-Debug/FlightConfigurator_v1_build_autogen/EWIEGA46WW/: moc_mainwindow.cpp
FlightConfigurator_v1/build-src-Desktop-Debug/FlightConfigurator_v1_build_autogen/include/: ui_mainwindow.h
FlightConfigurator_v1/config/: FullParametrList.txt  Logs.txt  Mission.flyplan
FlightConfigurator_v1/map/: CMakeLists.txt  datamapwidget.cpp  datamapwidget.h  dronemarker.cpp  dronemarker.h  flightplan.cpp  flightplan.h  mapbuttons.cpp  mapbuttons.h  mapcontroller.cpp  mapcontroller.h  mapwidget.cpp  mapwidget.h  plan_attrs.cpp  plan_attrs.h  planmapwidget.cpp  planmapwidget.h
FlightConfigurator_v1/pix/: CMakeLists.txt  params_description.csv
FlightConfigurator_v1/pix/pixhawk_manager/: hendler_structs.h  param_info.h  pixhawk_manager.cpp  pixhawk_manager.h
FlightConfigurator_v1/pix/pixhawk_manager/handlers/: message_handler.cpp  message_handler.h
FlightConfigurator_v1/pix/pixhawk_manager/links/: abstract_link.h  serial_link.cpp  serial_link.h  udp_link.cpp  udp_link.h
FlightConfigurator_v1/pixhawk_manager/: pixhawk_manager.cpp
FlightConfigurator_v1/pixhawk_manager/handlers/: abstract_handler.cpp  abstract_handler.h
FlightConfigurator_v1/pixhawk_manager/links/: serial_link.cpp
FlightConfigurator_v1/src/: CMakeLists.txt  horizon.cpp  horizon.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Flyght_controller/: CMakeLists.txt  CMakeLists.txt.user.585ac98  main.cpp  mainwindow.cpp  mainwindow.ui
Flyght_controller/binder/: binder.h  gcs_communicator_factory.cpp  mavlink_communicator.cpp  mavlink_communicator.h  pixhawk_manager.cpp  pixhawk_manager.h
Flyght_controller/binder/handlers/: global_position_int_handler.cpp  global_position_int_handler.h  heartbeat_handler.cpp  heartbeat_handler.h  message_handler.cpp  message_handler.h  scaled_imu_handler.cpp  scaled_imu_handler.h
fc_maptest/: CMakeLists.txt  main.cpp  mapwindow.cpp  mapwindow.h
maps/: world_map.qgs
maps/vector/: world_map3.qgs
maps/vector/kx-world-bathymetry-110-million-SHP/: world-bathymetry-110-million.dbf
maps/vector/kx-world-land-areas-110-million-SHP/: world-land-areas-110-million.dbf
maps/vector_world/: land.qml  water.qml
